--- a/package.json
+++ b/package.json
@@ -33,23 +33,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
-      }
-    }
-  },
   "packageManager": "pnpm@10.2.1+sha512.398035c7bd696d0ba0b10a688ed558285329d27ea994804a52bad9167d8e3a72bcb993f9699585d3ca25779ac64949ef422757a6c31102c12ab932e5cbe5cc92",
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
+    "jest-html-reporter": "^4.0.1",
     "prisma": "^6.4.1",
     "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
   "dependencies": {
