feat: Rename workflow to Test and Build Check and remove npm publish step

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: Publish to npm
+name: Test and Build Check
 
 on:
   pull_request:
@@ -28,8 +28,3 @@ jobs:
 
       - name: Build package
         run: npm run build
-
-      - name: Publish to npm
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
