--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Build package
         run: npm run build
 
+      - name: List dist contents (for debugging)
+        run: ls -la ./dist  # Verify dist folder contains the built files
+
       - name: Publish to npm
         run: npm publish
         env:
