feat: Update tsconfig.json to enable incremental builds and esModuleInterop

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,11 @@
         "declaration": true,
         "rootDir": "src",
         "outDir": "dist",
-        "strict": true
+        "strict": true,
+        "incremental": true,
+        "esModuleInterop": true,
     },
     "include": [
-        "src/**/*"
+        "src"
     ]
 }
