--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -12,8 +16,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Ensure all history is available for standard-version
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -36,11 +38,6 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           npm run release
           git push --follow-tags origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: List dist contents (for debugging)
-        run: ls -la ./dist
 
       - name: Publish to npm
         run: npm publish
