ci: Add DATABASE_URL environment variable to pull request workflow

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -24,6 +24,8 @@ jobs:
         run: npm ci
 
       - name: Run tests
+        env:
+            DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: npm test
 
       - name: Build package
