--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.10",
     "jest": "^29.7.0",
     "jest-html-reporter": "^4.0.1",
     "prisma": "^6.4.1",
