chore: add automatic version bump commit in publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,6 +48,8 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           pnpm run release
+          git add .
+          git commit -m "chore: version bump" || echo "No changes to commit"
           git push --follow-tags origin main
 
       - name: Publish to npm
