chore: update package.json to include additional distribution files

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     }
   },
   "files": [
-    "dist",
+    "dist/validations",
+    "dist/types",
+    "dist/utils",
     "README.md",
     "package.json"
   ],
