--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "@royal-voluntary-service/validation",
   "version": "0.0.14",
   "description": "Royal Voluntary Service Validation Package",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "private": false,
   "publishConfig": {
     "access": "public"
@@ -10,43 +12,25 @@
     "build": "tsc",
     "test": "jest --coverage",
     "prepublishOnly": "npm run build",
-    "release": "standard-version",
-    "db:pull": "prisma db pull",
-    "db:generate": "prisma generate"
-  },
-  "exports": {
-    "./validations": {
-      "import": "./dist/validations/index.js",
-      "types": "./dist/validations/index.d.ts"
-    },
-    "./types": {
-      "import": "./dist/types/index.js",
-      "types": "./dist/types/index.d.ts"
-    }
+    "release": "standard-version"
   },
   "files": [
-    "dist/validations",
-    "dist/types",
-    "dist/utils",
+    "dist",
     "README.md",
     "package.json"
   ],
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
     "jest": "^29.7.0",
     "jest-html-reporter": "^4.0.1",
-    "prisma": "^6.4.1",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
-  },
-  "peerDependencies": {
-    "@prisma/client": "^6.4.1"
   },
   "packageManager": "pnpm@10.2.1+sha512.398035c7bd696d0ba0b10a688ed558285329d27ea994804a52bad9167d8e3a72bcb993f9699585d3ca25779ac64949ef422757a6c31102c12ab932e5cbe5cc92"
 }
