--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,13 @@
         "module": "NodeNext",
         "target": "ESNext",
         "declaration": true,
-        "rootDir": "src",
-        "outDir": "dist",
+        "rootDir": "./src",
+        "outDir": "./dist",
         "strict": true,
         "incremental": true,
         "esModuleInterop": true,
+        "sourceMap": true,
+        "declarationMap": true
     },
     "include": [
         "src"
